# shooter

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  pyproject.toml  tox.ini
src/shooter/: __main__.py  board.py  constants.py  direction.py  shooter_class.py  square.py  utils.py
src/shooter/cli/: __init__.py  main_cli.py  play_cli.py  pygame_util.py
tests/: test_direction.py  test_shooter.py  test_square.py  test_utils.py
