[tool.poetry]
name = "shooter"
version = "0.1.0"
description = "Shooter game written in python for reinforcement learning"
authors = ["Sagi Shadur <saroad2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.25.0"
tensorflow = "^2.9.1"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
pygame = "^2.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
